add main content and footer

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
       <!--a main content of body page-->
       <section id="hero">
         <!--a hero section-->
-        <article class="hero-content">
+        <header class="hero-content">
           <h1>Do you like <strong>Night Owls</strong> ?</h1>
           <p>if yes, i think you will like to buy one.. here's why</p>
-        </article>
+        </header>
         <div class="hero-photo"></div>
       </section>
       <section class="owl-def">
@@ -64,7 +64,194 @@
             </p>
           </blockquote>
         </article>
+        <article class="para-one">
+          <!--another para using same css class style-->
+          <h2>Physical Characteristics of Owls</h2>
+          <blockquote cite="https://en.wikipedia.org/wiki/Owl" class="content">
+            <p>
+              <em>Owls</em>have many physical characteristics that make them
+              distinct from other birds. Understanding those physical
+              differences can help birders more easily recognize when they see
+              an owl, and these are the first clues necessary for owl
+              identification.
+            </p>
+            <dl>
+              <!--using data list to define types of Owls-->
+              <dt>Facial Disk</dt>
+              <!--datalist term-->
+              <dd>
+                <!--datalist description-->
+                An owl's face is distinctly shaped with a disk-like structure
+                that surrounds the bill and eyes. The bird can use its facial
+                muscles to slightly alter the shape of this disk and funnel
+                sound more efficiently to its ears, greatly amplifying its
+                hearing. The exact shape and color of the facial disk is a great
+                field mark for identifying owls.
+              </dd>
+              <dt>Forward Eyes</dt>
+              <dd>
+                Owls have forward-facing eyes that give them binocular vision
+                with improved depth perception and the ability to judge
+                distances.
+              </dd>
+              <dt>Ear Tufts</dt>
+              <dd>
+                are distinctive longer feathers on the side of the head that can
+                look like ears or horns, though they are not associated with
+                hearing in any way. Not all owls have ear tufts, but it is
+                believed that the tufts can help with the bird’s camouflage by
+                breaking up its outline to blend in better with its environment.
+                The position of the tufts can also be a form of communication
+                between owls, especially mates.
+              </dd>
+              <dt>Keen Hearing</dt>
+              <dd>
+                While all birds have good senses, owls have especially acute
+                hearing that can help them locate the small scuffling of prey
+                from great distances even in poor light or complete darkness.
+                Some owls have their ears placed asymmetrically on their heads,
+                an arrangement that can help them triangulate prey position more
+                quickly and accurately.
+              </dd>
+              <dt>Foot Structure</dt>
+              <dd>
+                Many owls have feathered feet to help with insulation and to
+                serve as minor protection from the bites or scratches of
+                captured prey. The feathers on the feet also work similar to
+                whiskers and help the birds detect when prey is within their
+                grasp. Owl toes are also unique, and the outermost forward toe
+                can rotate to face the back to hold prey more efficiently.
+              </dd>
+            </dl>
+          </blockquote>
+        </article>
+      </section>
+      <section class="owl-media">
+        <!--owl-media section-->
+        <header>
+          <!--seting a header to new section-->
+          <h3>more about owls</h3>
+        </header>
+        <div class="owl-videos">
+          <!--using div for grid style for videos-->
+          <figure>
+            <iframe
+              width="430"
+              height="315"
+              src="https://www.youtube.com/embed/d_FEaFgJyfA"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+            <figcaption>
+              How Does An Owl Fly So Silently? | Super Powered Owls | BBC
+            </figcaption>
+          </figure>
+          <figure>
+            <iframe
+              width="430"
+              height="315"
+              src="https://www.youtube.com/embed/WpejrfqDDIQ"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+            <figcaption>
+              The Owl: Master Of The Hunt (Nature Documentary)
+            </figcaption>
+          </figure>
+        </div>
+        <div class="owl-imgs">
+          <figure>
+            <img
+              src="images/flight-owl-1920.jpg"
+              alt="a nice beautifull owl fligtht on snowing background"
+              srcset="
+                images/flight-owl-640.jpg,
+                images/flight-owl-640.jpg  1.5x,
+                images/flight-owl-1920.jpg 2x
+              "
+            />
+            <figcaption>flying snow owl</figcaption>
+          </figure>
+          <figure>
+            <img
+              src="images/snow-owl-1920.jpg"
+              alt="an owl flying on afternoon"
+              srcset="
+                images/snow-owl-640.jpg,
+                images/snow-owl-640.jpg  1.5x,
+                images/snow-owl-1920.jpg 2x
+              "
+            />
+            <figcaption>how snow owl flying</figcaption>
+          </figure>
+          <figure>
+            <img
+              src="images/owl-white-1920.jpg"
+              alt="setting owl on snow time"
+              srcset="
+                images/owl-white-640.jpg,
+                images/owl-white-640.jpg  1.5x,
+                images/owl-white-1920.jpg 2x
+              "
+            />
+            <figcaption>owls setting</figcaption>
+          </figure>
+          <figure>
+            <img
+              src="images/owl-bluesky-1920.jpg"
+              alt="a flying owl in blue sky"
+              srcset="
+                images/owl-blushy-640.jpg,
+                images/owl-blushy-640.jpg   1.5x,
+                images/owl-bluesky-1920.jpg 2x
+              "
+            />
+            <figcaption>snow owl</figcaption>
+          </figure>
+        </div>
       </section>
     </main>
+    <!--end of main content-->
+    <footer id="footer">
+      <!--footer-->
+      <section class="footer-head">
+        <div class="footer-logo">
+          <img src="images/LogoMakr-45mCkg.png" alt="black-owl-logo" />
+        </div>
+        <p>LEARN MORE ABOUT BEAUTIFULL OWLS.</p>
+      </section>
+      <section class="footer-contact">
+        <form>
+          <label for="subscripe">subscripe now to get more details</label>
+          <input type="text" name="subscripe" id="subscripe" />
+          <button type="submit">sign up</button>
+        </form>
+        <div class="social-media">
+          <p>follow us on :</p>
+          <ul class="social-links">
+            <li>
+              <a href="http://" target="_blank" rel="noopener noreferrer"
+                >facebook</a
+              >
+            </li>
+            <li>
+              <a href="http://" target="_blank" rel="noopener noreferrer"
+                >instgram</a
+              >
+            </li>
+            <li>
+              <a href="http://" target="_blank" rel="noopener noreferrer"
+                >pintrest</a
+              >
+            </li>
+          </ul>
+        </div>
+      </section>
+      <p class="footer-rights">all rights reserved &copy;2022 by AYMAN GAMAL</p>
+    </footer>
   </body>
 </html>
