finishing mobile approach for website

--- a/index.html
+++ b/index.html
@@ -216,6 +216,8 @@
       </section>
     </main>
     <!--end of main content-->
+    <hr class="footer-line" />
+    <hr class="footer-line" />
     <footer id="footer">
       <!--footer-->
       <section class="footer-head">
@@ -227,8 +229,13 @@
       <section class="footer-contact">
         <form>
           <label for="subscripe">subscripe now to get more details</label>
-          <input type="text" name="subscripe" id="subscripe" />
-          <button type="submit">sign up</button>
+          <input
+            type="text"
+            name="subscripe"
+            id="subscripe"
+            placeholder="Enter Your Email Here"
+          />
+          <button type="submit" class="btn-sec">sign up</button>
         </form>
         <div class="social-media">
           <p>follow us on :</p>
@@ -251,6 +258,7 @@
           </ul>
         </div>
       </section>
+      <a href="#" target="_top">retrun link</a>
       <p class="footer-rights">all rights reserved &copy;2022 by AYMAN GAMAL</p>
     </footer>
   </body>
