fixing some accessabilty and validation on html file and css

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </header>
         <div class="hero-photo"></div>
       </section>
-      <section class="owl-def">
+      <div class="owl-def">
         <!--owl-def section-->
         <article class="para-one">
           <h2>what is owl?</h2>
@@ -125,7 +125,7 @@
             </dl>
           </blockquote>
         </article>
-      </section>
+      </div>
       <section class="owl-media">
         <!--owl-media section-->
         <header>
@@ -136,11 +136,8 @@
           <!--using div for grid style for videos-->
           <figure>
             <iframe
-              width="430"
-              height="315"
               src="https://www.youtube.com/embed/d_FEaFgJyfA"
               title="YouTube video player"
-              frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen
             ></iframe>
@@ -150,11 +147,8 @@
           </figure>
           <figure>
             <iframe
-              width="430"
-              height="315"
               src="https://www.youtube.com/embed/WpejrfqDDIQ"
               title="YouTube video player"
-              frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen
             ></iframe>
@@ -220,13 +214,13 @@
     <hr class="footer-line" />
     <footer id="footer">
       <!--footer-->
-      <section class="footer-head">
+      <div class="footer-head">
         <div class="footer-logo">
           <img src="images/LogoMakr-45mCkg.png" alt="black-owl-logo" />
         </div>
         <p>LEARN MORE ABOUT BEAUTIFULL OWLS.</p>
-      </section>
-      <section class="footer-contact">
+      </div>
+      <div class="footer-contact">
         <form>
           <label for="subscripe">subscripe now to get more details</label>
           <input
@@ -241,23 +235,17 @@
           <p>follow us on :</p>
           <ul class="social-links">
             <li>
-              <a href="http://" target="_blank" rel="noopener noreferrer"
-                >facebook</a
-              >
+              <a href="#" target="_blank" rel="noopener noreferrer">facebook</a>
             </li>
             <li>
-              <a href="http://" target="_blank" rel="noopener noreferrer"
-                >instgram</a
-              >
+              <a href="#" target="_blank" rel="noopener noreferrer">instgram</a>
             </li>
             <li>
-              <a href="http://" target="_blank" rel="noopener noreferrer"
-                >pintrest</a
-              >
+              <a href="#" target="_blank" rel="noopener noreferrer">pintrest</a>
             </li>
           </ul>
         </div>
-      </section>
+      </div>
       <a href="#" target="_top">retrun link</a>
       <p class="footer-rights">all rights reserved &copy;2022 by AYMAN GAMAL</p>
     </footer>
