add desktop breakpoints

--- a/index.html
+++ b/index.html
@@ -75,53 +75,63 @@
               an owl, and these are the first clues necessary for owl
               identification.
             </p>
-            <dl>
+            <dl class="dataList__container">
               <!--using data list to define types of Owls-->
-              <dt>Facial Disk</dt>
-              <!--datalist term-->
-              <dd>
-                <!--datalist description-->
-                An owl's face is distinctly shaped with a disk-like structure
-                that surrounds the bill and eyes. The bird can use its facial
-                muscles to slightly alter the shape of this disk and funnel
-                sound more efficiently to its ears, greatly amplifying its
-                hearing. The exact shape and color of the facial disk is a great
-                field mark for identifying owls.
-              </dd>
-              <dt>Forward Eyes</dt>
-              <dd>
-                Owls have forward-facing eyes that give them binocular vision
-                with improved depth perception and the ability to judge
-                distances.
-              </dd>
-              <dt>Ear Tufts</dt>
-              <dd>
-                are distinctive longer feathers on the side of the head that can
-                look like ears or horns, though they are not associated with
-                hearing in any way. Not all owls have ear tufts, but it is
-                believed that the tufts can help with the bird’s camouflage by
-                breaking up its outline to blend in better with its environment.
-                The position of the tufts can also be a form of communication
-                between owls, especially mates.
-              </dd>
-              <dt>Keen Hearing</dt>
-              <dd>
-                While all birds have good senses, owls have especially acute
-                hearing that can help them locate the small scuffling of prey
-                from great distances even in poor light or complete darkness.
-                Some owls have their ears placed asymmetrically on their heads,
-                an arrangement that can help them triangulate prey position more
-                quickly and accurately.
-              </dd>
-              <dt>Foot Structure</dt>
-              <dd>
-                Many owls have feathered feet to help with insulation and to
-                serve as minor protection from the bites or scratches of
-                captured prey. The feathers on the feet also work similar to
-                whiskers and help the birds detect when prey is within their
-                grasp. Owl toes are also unique, and the outermost forward toe
-                can rotate to face the back to hold prey more efficiently.
-              </dd>
+              <div class="dataList-card">
+                <dt>Facial Disk</dt>
+                <!--datalist term-->
+                <dd>
+                  <!--datalist description-->
+                  An owl's face is distinctly shaped with a disk-like structure
+                  that surrounds the bill and eyes. The bird can use its facial
+                  muscles to slightly alter the shape of this disk and funnel
+                  sound more efficiently to its ears, greatly amplifying its
+                  hearing. The exact shape and color of the facial disk is a
+                  great field mark for identifying owls.
+                </dd>
+              </div>
+              <div class="dataList-card">
+                <dt>Forward Eyes</dt>
+                <dd>
+                  Owls have forward-facing eyes that give them binocular vision
+                  with improved depth perception and the ability to judge
+                  distances.
+                </dd>
+              </div>
+              <div class="dataList-card">
+                <dt>Ear Tufts</dt>
+                <dd>
+                  are distinctive longer feathers on the side of the head that
+                  can look like ears or horns, though they are not associated
+                  with hearing in any way. Not all owls have ear tufts, but it
+                  is believed that the tufts can help with the bird’s camouflage
+                  by breaking up its outline to blend in better with its
+                  environment. The position of the tufts can also be a form of
+                  communication between owls, especially mates.
+                </dd>
+              </div>
+              <div class="dataList-card">
+                <dt>Keen Hearing</dt>
+                <dd>
+                  While all birds have good senses, owls have especially acute
+                  hearing that can help them locate the small scuffling of prey
+                  from great distances even in poor light or complete darkness.
+                  Some owls have their ears placed asymmetrically on their
+                  heads, an arrangement that can help them triangulate prey
+                  position more quickly and accurately.
+                </dd>
+              </div>
+              <div class="dataList-card">
+                <dt>Foot Structure</dt>
+                <dd>
+                  Many owls have feathered feet to help with insulation and to
+                  serve as minor protection from the bites or scratches of
+                  captured prey. The feathers on the feet also work similar to
+                  whiskers and help the birds detect when prey is within their
+                  grasp. Owl toes are also unique, and the outermost forward toe
+                  can rotate to face the back to hold prey more efficiently.
+                </dd>
+              </div>
             </dl>
           </blockquote>
         </article>
@@ -246,8 +256,12 @@
           </ul>
         </div>
       </div>
-      <a href="#" target="_top">retrun link</a>
-      <p class="footer-rights">all rights reserved &copy;2022 by AYMAN GAMAL</p>
+      <div class="sticky">
+        <a href="#" target="_top">retrun link</a>
+        <p class="footer-rights">
+          all rights reserved &copy;2022 by AYMAN GAMAL
+        </p>
+      </div>
     </footer>
   </body>
 </html>
